--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hoek": "4.x.x",
     "inert": "^4.2.1",
     "joi": "^11.0.3",
+    "log": "^1.4.0",
     "mongoose": "^4.11.12",
     "vision": "^4.1.1"
   },
