--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
+    "async": "^2.5.0",
     "boom": "^5.2.0",
     "dotenv": "^4.0.0",
     "hapi": "15.x.x",
