--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "npm run lint && jasmine",
-    "lint": "eslint *.js server spec"
+    "test": "npm run lint && mocha --recursive test",
+    "lint": "eslint *.js server test"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "chai": "^4.1.2",
     "eslint": "^4.7.2",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
@@ -44,7 +45,9 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jasmine": "^2.8.0",
-    "nodemon": "1.x.x"
+    "mocha": "^3.5.3",
+    "nodemon": "1.x.x",
+    "sinon": "^3.3.0",
+    "sinon-mongoose": "^2.0.2"
   }
 }
