--- a/public/package.json
+++ b/public/package.json
@@ -48,6 +48,7 @@
     "mocha": "^3.5.3",
     "nodemon": "1.x.x",
     "sinon": "^3.3.0",
+    "sinon-chai": "^2.13.0",
     "sinon-mongoose": "^2.0.2"
   }
 }
